grid gallery added

--- a/index.html
+++ b/index.html
@@ -123,21 +123,21 @@
       <div class="carousel-inner relative w-full overflow-hidden">
         <div class="carousel-item active float-left w-full">
           <img
-            src="https://source.unsplash.com/1200x600/?uidesign"
+            src="https://images.unsplash.com/photo-1587620962725-abab7fe55159?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1031&q=80"
             class="block w-full"
             alt="Wild Landscape"
           />
         </div>
         <div class="carousel-item float-left w-full">
           <img
-            src="https://source.unsplash.com/1200x600/?design"
+            src="https://images.unsplash.com/photo-1528901166007-3784c7dd3653?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzN8fGRldmVsb3BlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
             class="block w-full"
             alt="Camera"
           />
         </div>
         <div class="carousel-item float-left w-full">
           <img
-            src="https://source.unsplash.com/1200x600/?programming"
+            src="https://images.unsplash.com/photo-1605379399843-5870eea9b74e?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8MzZ8fGRldmVsb3BlcnxlbnwwfHwwfHw%3D&auto=format&fit=crop&w=500&q=60"
             class="block w-full"
             alt="Exotic Fruits"
           />
@@ -180,7 +180,7 @@
                 src="https://source.unsplash.com/720x600/?developer"
                 loading="lazy"
                 alt="Photo by Martin Sanchez"
-                class="w-full h-full object-cover object-center"
+                class="w-full h-full object-cover object-center hover:scale-110 transition duration-300 ease-in-out"
               />
             </div>
           </div>
@@ -649,6 +649,60 @@
         </div>
       </div>
     </div>
+
+    <!-- Grid Gallery -->
+    <section class="overflow-hidden text-gray-700">
+      <div class="container px-5 py-2 mx-auto lg:pt-24 lg:px-32">
+        <div class="flex flex-wrap -m-1 md:-m-2">
+          <div class="flex flex-wrap w-1/2">
+            <div class="w-1/2 p-1 md:p-2">
+              <img
+                alt="gallery"
+                class="block object-cover object-center w-full h-full rounded-lg hover:scale-110 transition duration-300 ease-in-out"
+                src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(70).webp"
+              />
+            </div>
+            <div class="w-1/2 p-1 md:p-2">
+              <img
+                alt="gallery"
+                class="block object-cover object-center w-full h-full rounded-lg hover:scale-110 transition duration-300 ease-in-out"
+                src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(72).webp"
+              />
+            </div>
+            <div class="w-full p-1 md:p-2">
+              <img
+                alt="gallery"
+                class="block object-cover object-center w-full h-full rounded-lg hover:scale-110 transition duration-300 ease-in-out"
+                src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(73).webp"
+              />
+            </div>
+          </div>
+          <div class="flex flex-wrap w-1/2">
+            <div class="w-full p-1 md:p-2">
+              <img
+                alt="gallery"
+                class="block object-cover object-center w-full h-full rounded-lg hover:scale-110 transition duration-300 ease-in-out"
+                src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(74).webp"
+              />
+            </div>
+            <div class="w-1/2 p-1 md:p-2">
+              <img
+                alt="gallery"
+                class="block object-cover object-center w-full h-full rounded-lg hover:scale-110 transition duration-300 ease-in-out"
+                src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(75).webp"
+              />
+            </div>
+            <div class="w-1/2 p-1 md:p-2">
+              <img
+                alt="gallery"
+                class="block object-cover object-center w-full h-full rounded-lg hover:scale-110 transition duration-300 ease-in-out"
+                src="https://mdbcdn.b-cdn.net/img/Photos/Horizontal/Nature/4-col/img%20(77).webp"
+              />
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
 
     <div class="bg-white py-6 sm:py-8 lg:py-12">
       <div class="max-w-screen-xl px-4 md:px-8 mx-auto">
